[PNUDEV-3] Create registration and login form, setup Spring Security

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,7 @@
 spring:
   freemarker:
     suffix: ".ftl"
+  datasource:
+    url: ${URL_DB}
+    username: ${USERNAME_DB}
+    password: ${PASSWORD_DB}
