--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,9 @@
 spring:
   freemarker:
     suffix: ".ftl"
+  datasource:
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/MyGmail}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:root}
+server:
+  port: 12345
