add ROLE_ADMIN and admin functionality

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,3 +5,8 @@ spring:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/MyGmail}
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:root}
+
+admin:
+  default:
+    username: ${ADMIN_DEFAULT_USERNAME:GmailAdmin}
+    password: ${ADMIN_DEFAULT_PASSWORD:admin}
